# OScaR-KV-Quant

./: .gitignore  .gitmodules  LICENSE  README.md  eval_long_bench.py  eval_longbench.py  eval_longbench_batch.py  install.sh  longbench_metrics.py  pyproject.toml  requirements.txt  setup.py
csrc/oscar/: CMakeLists.txt  decode_api.cpp
csrc/oscar/src/: bench_single_packdecode.cu  bench_single_residual.cu  flash_api.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  k_preprocess.cu  test_batch_packdecode.cu  test_single_packdecode.cu  test_single_residual.cu
csrc/oscar/src/genfile/: flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_split_hdim128_fp16_sm80_2bit.cu  flash_fwd_split_hdim128_fp16_sm80_4bit.cu  flash_qpack_hdim128_fp16_sm80_2bit.cu  flash_qpack_hdim128_fp16_sm80_4bit.cu
csrc/oscar/src/include/: block_info.h  dequantize.h  flash.h  kernel_traits.h  mask.h  qpack.h  softmax.h  utils.h
evaluation/: bench_throughput.py  example.py  qwen3.py  test.py  test_v_pack_2bit_layout.py
evaluation/ablation/: test_bitblas.py  test_marlin.py
evaluation/ablation/script/: test_bitblas.sh
evaluation/scripts/: bench_throughput.sh  example.sh  run_qwen3_gsm8k_accuracy.py  run_qwen3_suite.py
kv_cache_compression/: __init__.py  monkeypatch.py  quarot_utils.py  qwen3_model.py
oscar/: __init__.py  oscar_interface.py
oscar/models/: cache_utils.py
