[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-kvcache"
version = "0.1.0"
description = "OScaR: KV cache quantization with Hadamard rotation and norm factoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.45.0",
    "numpy>=1.24.0",
    "accelerate>=1.0.0",
    "flash-attn>=2.5.0",
    "fast-hadamard-transform",
    "rouge",
    "jieba",
    "fuzzywuzzy[speedup]",
]

[tool.setuptools.packages.find]
include = ["oscar*", "kv_cache_compression*"]
