[build-system]
requires = ["setuptools>=68", "wheel", "packaging", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "oscar-kv-quant"
version = "1.0.0.post1"
description = "OScaR: extreme KV cache quantization for long-context and multimodal LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "packaging",
    "transformers",
]

[project.optional-dependencies]
cuda = [
    "flash-attn==2.8.3",
]
eval = [
    "accelerate",
    "datasets",
    "fuzzywuzzy[speedup]",
    "jieba",
    "rouge",
    "tqdm",
]
analysis = [
    "matplotlib",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/Iridescent-gcrace/OScaR-KV-Quant"
Repository = "https://github.com/Iridescent-gcrace/OScaR-KV-Quant"

[tool.setuptools.packages.find]
include = ["oscar*", "kv_cache_compression*"]
